# fit-configurations

./: README.md  main.py  pyproject.toml
.github/workflows/: contract-tests.yml  e2e-tests.yml  integration-tests.yml  lint.yml  security-code.yml  security-deps.yml  type-check.yml  unit-tests.yml
fit_configurations/: logger.py  utils.py
fit_configurations/controller/tabs/: tab.py
fit_configurations/controller/tabs/general/: general.py  legal_proceeding_type.py  typesproceedings.py
fit_configurations/controller/tabs/language/: language.py
fit_configurations/controller/tabs/network/: network_check.py  network_tool.py  networkcheck.py  networktools.py
fit_configurations/controller/tabs/packet_capture/: packet_capture.py
fit_configurations/controller/tabs/packetcapture/: packetcapture.py
fit_configurations/controller/tabs/pec/: pec.py
fit_configurations/controller/tabs/screen_recorder/: screen_recorder.py
fit_configurations/controller/tabs/screenrecorder/: screenrecorder.py
fit_configurations/controller/tabs/timestamp/: timestamp.py
fit_configurations/lang/: __init__.py  en.json  it.json
fit_configurations/model/: db.py
fit_configurations/model/tabs/: tab.py
fit_configurations/model/tabs/general/: general.py  legal_proceeding_type.py  typesproceedings.py
fit_configurations/model/tabs/language/: language.py
fit_configurations/model/tabs/network/: network_check.py  network_tool.py  networkcheck.py  networktools.py
fit_configurations/model/tabs/packet_capture/: packet_capture.py
fit_configurations/model/tabs/packetcapture/: packetcapture.py
fit_configurations/model/tabs/pec/: pec.py
fit_configurations/model/tabs/screen_recorder/: screen_recorder.py
fit_configurations/model/tabs/screenrecorder/: screenrecorder.py
fit_configurations/model/tabs/timestamp/: timestamp.py
fit_configurations/ui/: audio_setting.ui  configuration.ui
fit_configurations/view/: classname2objectname.py  configuration.py  configuration_ui.py  tab.py
fit_configurations/view/tabs/: __init__.py  tab.py
fit_configurations/view/tabs/general/: general.py
fit_configurations/view/tabs/language/: language.py
fit_configurations/view/tabs/network/: network.py
fit_configurations/view/tabs/packet_capture/: packet_capture.py
fit_configurations/view/tabs/packetcapture/: packetcapture.py
fit_configurations/view/tabs/pec/: pec.py
fit_configurations/view/tabs/screen_recorder/: audio_setting.py  audio_setting_ui.py  screen_recorder.py
fit_configurations/view/tabs/screenrecorder/: audio_setting.py  audio_setting_ui.py  screenrecorder.py
fit_configurations/view/tabs/timestamp/: timestamp.py
tests/: conftest.py
tests/contract/: test_tab_view_contract.py
tests/e2e/: test_configuration_e2e.py  test_tabs_e2e.py
tests/integration/: test_configuration_dialog.py  test_general_controller_db.py  test_general_view.py  test_models_and_controllers.py  test_screen_recorder_view.py  test_tab_views.py
tests/unit/: test_lang.py
