[tool.poetry]
name = "fit-configurations"
version = "1.0.11"
description = "This module provides the graphical interface for configuring settings used by the FIT application."
authors = ["FIT Project"]
license = "LGPL-3.0-or-later"
packages = [
    { include = "fit_configurations" }
]

include = [
    "fit_configurations/ui/configuration.ui"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
PySide6 = "6.9.0"
sqlalchemy = "^2.0.40"

fit-common = {git = "https://github.com/fit-project/fit-common.git", branch = "refactor/core/pdf-report-builder"}
fit-assets = {git = "https://github.com/fit-project/fit-assets.git", branch = "3-align-all-report-templates-into-two-macro-templates-fronthtml-and-contenthtml"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"