[tool.poetry]
name = "fit-configurations"
version = "1.0.0"
description = "This module provides the graphical interface for configuring settings used by the FIT application."
authors = ["FIT Project"]
license = "LGPL-3.0-or-later"
packages = [{ include = "fit_configurations" }]

exclude = ["fit_configurations/ui/**"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
PySide6 = "6.9.0"
sqlalchemy = "^2.0.40"

fit-common = {git = "https://github.com/fit-project/fit-common.git", branch = "feat/ffmpeg-utils"}
fit-assets = {git = "https://github.com/fit-project/fit-assets.git", tag = "v1.0.0-rc2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
pythonpath = ["."]
markers = [
    "unit: fast isolated tests",
    "contract: cross-module contract tests for public interfaces and integrations",
    "integration: integration tests with real external resources and dependencies",
    "e2e: end-to-end UI workflow tests",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
  "fit_common",
  "fit_common.*",
  "fit_assets",
  "fit_assets.*",
  "sqlalchemy",
  "sqlalchemy.*",
]
ignore_missing_imports = true
